package chessman;

import chessboard.Position;

public class Pawn extends Creature {
    Pawn(String n, Position s, Boolean c) {
        super(n, s, c);

    }

}